[GowriK] Refactor : Some of the inline css is taken in dashboard chat

--- a/src/components/Dashboard/dashboard.less
+++ b/src/components/Dashboard/dashboard.less
@@ -132,6 +132,8 @@
   border: 1px solid @white;
   border-radius: 30px;
   padding: 12px;
+  outline: none;
+  border: none;
 }
 .search {
   display: flex;
@@ -234,7 +236,7 @@
 }
 .notify {
   position: absolute;
-  top: 30px;
+  top: 8px;
   margin-left: 16px;
 }
 .notify .point {
@@ -255,6 +257,10 @@
 .notificationrotate {
   display: flex;
   flex-direction: row;
+  position: fixed;
+}
+.fontStyle {
+  font-size: 18px;
 }
 
 /* Extra small devices (phones, 600px and down) */
