--- a/src/components/ProductDetails/productDetails.less
+++ b/src/components/ProductDetails/productDetails.less
@@ -2,7 +2,6 @@
   margin-top: 64px;
   display: flex;
   flex-direction: row;
-  // align-items: center;
   background-color: #94a2f0;
   height: 150px;
   padding: 20px;
@@ -10,20 +9,21 @@
   width: 100%;
   flex-wrap: wrap;
 }
+.mapDiv {
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+}
 .firstcontainerdetails {
-  // width: 100%;
   display: inline;
   justify-content: center;
   align-items: center;
 
   .containerFluiddetails {
     display: flex;
-    // flex-wrap:wrap ;
-    // padding: 15px;
     z-index: 3;
     top: 11em;
     position: absolute;
-    // background-color: orange;
   }
   .rowFlexdetails {
     display: flex;
@@ -32,18 +32,12 @@
     width: 100%;
   }
   .coldetails {
-    // max-width: 25%;
-    // position: relative;
     display: flex;
     flex-direction: column;
-    // flex-wrap: wrap;
-    // width: 100%;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
-
-    // background-color: red;
   }
 }
 .productSizedetails {
@@ -70,17 +64,14 @@
   width: 330px;
   border-radius: 50px;
   background-color: #b8c0e2;
-  // margin-left: 150px;
 }
 .homeIcon1details {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  // border: 1px solid #aab3e7;
   border-radius: 30px;
   padding: 5px;
-  // width: 350px;
   height: 46px;
   margin-left: 10px;
 }
@@ -106,8 +97,6 @@
   font-size: 17px;
   margin-left: 7px;
   font-family: "Montserrat", sans-serif, monospace;
-
-  // color: #888;
 }
 
 .columnWise {
@@ -119,32 +108,23 @@
   height: 316px;
 }
 .coldetails {
-  // max-width: 25%;
-  // position: relative;
   display: flex;
   flex-direction: column;
-  // flex-wrap: wrap;
-  // width: 100%;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
-
-  // background-color: red;
 }
 .productItemdetails {
   background-color: white;
-  // width: 249px;
   box-shadow: none;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 10px;
 }
 .productItemdetails1 {
   background-color: white;
-  // width: 249px;
   box-shadow: none;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  // padding:10px;
   margin-top: 20px;
 }
 .roworder {
@@ -175,12 +155,9 @@
 .para1style {
   font-size: 15px;
   font-family: "Montserrat", Arial, Tahoma, sans-serif;
-  // background-attachment: red;
   display: flex;
   flex-wrap: wrap;
   font-weight: 400;
-  //   max-width: 740px;
-  // min-width: 380px;
 }
 .rowSide {
   display: flex;
@@ -234,9 +211,6 @@
   width: 134px;
   height: 47px;
   margin: 10px;
-  // border: 1px solid #6572b8;
-  // border-radius: 30px;
-  // padding: 20px;
   .broder();
 }
 .cart {
@@ -246,12 +220,8 @@
   align-items: center;
   color: white;
   width: 130px;
-  // min-width : 50px;
   height: 40px;
   margin: 10px;
-  // border: 1px solid #6572b8;
-  // border-radius: 30px;
-  // padding: 20px;
   background-color: #6f42c1;
   .broder();
 }
@@ -266,16 +236,13 @@
 }
 .about {
   margin: 10px;
-  // color: #888;
   font-size: 15px;
 }
 .about1 {
-  // margin: 10px;
   color: #888;
   font-size: 15px;
 }
 .color {
-  // margin-top: 10px;
   width: 40px;
   height: 40px;
   margin-left: 20px;
