[GowriK] Refactor : Inline css is taken in product,productist and deleted the commented lines in css

--- a/src/components/HeaderPage/headerPage.less
+++ b/src/components/HeaderPage/headerPage.less
@@ -14,6 +14,18 @@
 .oreoheader {
   color: @lightgrey;
 }
+.iconStyle {
+  font-size: 20px;
+  padding-right: 3px;
+}
+.iconStyle2 {
+  font-size: 22px;
+  padding-right: 3px;
+}
+.centerStyle {
+  display: flex;
+  justify-content: center;
+}
 .homeIconheader {
   display: flex;
   justify-content: center;
