--- a/src/components/Product/product.less
+++ b/src/components/Product/product.less
@@ -13,7 +13,11 @@
   width: 409px;
   height: 409px;
 }
-
+.discountDollar {
+  margin-left: 10px;
+  color: red;
+  font-weight: 500;
+}
 .rowP {
   margin-top: 64px;
   display: flex;
@@ -36,7 +40,6 @@
   color: @white;
 }
 .productWelcomeP {
-  // font-family: lato,monospace;
   font-size: 14px;
   color: @white;
 }
@@ -49,7 +52,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  // border: 1px solid #aab3e7;
   background-color: #b8c0e2;
   border-radius: 30px;
   padding: 5px;
@@ -59,7 +61,6 @@
   margin-left: 12px;
 }
 .oreo1 {
-  // font-family: "Montserrat",sans-serif;
   color: @white;
   width: 100%;
   display: flex;
@@ -80,10 +81,8 @@
   margin-left: 7px;
 }
 .containerFluid {
-  // width: 100%;
   display: flex;
   flex-wrap: wrap;
-  // padding: 15px;
   justify-content: center;
   align-items: center;
   z-index: 3;
@@ -95,14 +94,11 @@
   display: flex;
   justify-content: center;
   background-color: none;
-  // flex-direction: row;
 }
 .rowFlex1 {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  // width: 100%;
-  // justify-content: center;
 }
 .col {
   display: flex;
@@ -121,7 +117,6 @@
 .body {
   color: #424242;
   font-weight: 400;
-  // padding: 20px;
   font-size: 14px;
 }
 .imgFolder {
@@ -135,8 +130,6 @@
   padding: 5px;
   display: flex;
   z-index: 5;
-  // top:1em;
-  // position: absolute;
   justify-content: center;
 }
 .imgSize {
@@ -176,8 +169,6 @@
   justify-content: center;
   margin-bottom: 30px;
   padding: 5px;
-  // background-color: yellowgreen;
-  // margin-top: 10px;
 }
 .hoverbutton1 {
   visibility: hidden;
@@ -188,7 +179,6 @@
   flex-direction: row;
 }
 .imgFolder:hover .hoverbutton {
-  // display:block;
   visibility: visible;
   background-color: yellowgreen;
 }
@@ -196,7 +186,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // background-color:yellowgreen;
   width: 20px;
   height: 20px;
 }
@@ -219,10 +208,7 @@
     width: 320px;
     height: 320px;
     transform: scale(1.3);
-    // z-index: 3;
-    // top:-1em;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    // transition: 1s;
   }
   .productItem {
     background-color: @white;
@@ -242,13 +228,6 @@
     padding: 5px;
     margin-top: 26px;
   }
-  // .productSizeP{
-  //     height: 67px;
-  //     display: flex;
-  //     align-items: flex-start;
-  //     // justify-content: space-between;
-  //     width: 100%;
-  // }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -260,10 +239,7 @@
     width: 220px;
     height: 220px;
     transform: scale(1.3);
-    // z-index: 3;
-    // top:-1em;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    // transition: 1s;
   }
   .productItem {
     background-color: @white;
@@ -343,9 +319,7 @@
     justify-content: center;
     margin-bottom: 30px;
     padding: 5px;
-    // background-color: yellowgreen;
     margin-top: 0px;
-    // margin-top: 10px;
   }
   .imgFolder {
     padding: 5px;
@@ -358,8 +332,6 @@
     padding: 5px;
     display: flex;
     z-index: 5;
-    // top:1em;
-    // position: absolute;
     justify-content: center;
   }
 }
@@ -394,9 +366,7 @@
     justify-content: center;
     margin-bottom: 30px;
     padding: 5px;
-    // background-color: yellowgreen;
     margin-top: 0px;
-    // margin-top: 10px;
   }
   .imgFolder {
     padding: 5px;
@@ -409,8 +379,6 @@
     padding: 5px;
     display: flex;
     z-index: 5;
-    // top:1em;
-    // position: absolute;
     justify-content: center;
   }
 }
