[GowriK] Refactor : Inline css is taken in dashboarrdchart and deleted the commented lines in css

--- a/src/components/DashboardChart/dashboardChat.less
+++ b/src/components/DashboardChart/dashboardChat.less
@@ -489,6 +489,28 @@
   width: 163px;
   height: 47px;
 }
+.addressStyle {
+  widows: 449px;
+  height: 47px;
+}
+.qualityStyle {
+  width: 113px;
+  height: 47px;
+}
+.statusStyle {
+  width: 60px;
+  height: 47px;
+}
+.greyBoxStyle {
+  width: 40px;
+  height: 33px;
+  background-color: "rgb(204,204,204)";
+}
+.blackBar {
+  margin-top: 20px;
+  justify-content: center;
+  display: flex;
+}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .rowFlex1chart {
@@ -496,7 +518,6 @@
     flex-wrap: wrap;
     flex-direction: row;
     background-color: white;
-    // width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   .rowFlexchart11 {
@@ -509,7 +530,6 @@
   .rowFlexchart {
     display: flex;
     margin-top: 20px;
-    // width: 00%;
     justify-content: center;
     height: 800px;
   }
@@ -585,8 +605,6 @@
   }
   .chart1 {
     width: 90%;
-    // max-width: 960px;
-    // min-width: 450px;
     height: 400px;
     margin-top: 30px;
     position: relative;
@@ -682,8 +700,6 @@
   }
   .chart1 {
     width: 90%;
-    // max-width: 960px;
-    // min-width: 450px;
     height: 440px;
     margin-top: 30px;
     position: relative;
@@ -755,8 +771,6 @@
   }
   .chart1 {
     width: 90%;
-    // max-width: 960px;
-    // min-width: 450px;
     height: 440px;
     margin-top: 30px;
     position: relative;
@@ -828,8 +842,6 @@
   }
   .chart1 {
     width: 90%;
-    // max-width: 960px;
-    // min-width: 450px;
     height: 440px;
     margin-top: 50px;
     position: relative;
